Fixed aligncenter bug in blog posts which stopped images from centering

--- a/assets/css/framework.css
+++ b/assets/css/framework.css
@@ -2510,6 +2510,9 @@ object{
 		float: right;
 	}
 	.aligncenter{
+		clear: both;
+		margin-left: auto;
+		margin-right: auto;
 		text-align: center;
 	}
 	.bypostauthor{
